--- a/style.css
+++ b/style.css
@@ -1,7 +1,104 @@
-/* @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"); */
-* { background-color: antiquewhite;}
+body{
+    margin: 0;
+   padding: 0;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 50px;
+    row-gap:20px ;
+}
 
-/* make sure i have media queries */
 
 
+.main-image-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    margin: 10px;
+}
 
+.image-container {
+    position: absolute;
+    top :0;
+    height: 100%;
+    left: 0;
+    display: flex;
+    width: max-content;
+    
+}
+
+
+.image-container img{
+    width: 100%;
+   height: 100%;
+   object-fit: cover;
+    position: relative;
+}
+
+
+.thumbnail-container {
+    position: absolute;
+    top: 10%;
+    left: 45%;
+    display: flex;
+    gap: 10px;
+    width: max-content;
+    height: 50px;
+
+}
+
+.thumbnail-container .item1{
+    width: 100px;
+    height: 150px;
+    position: relative;
+ 
+
+}
+.thumbnail-container .item1 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 5px 0 15px;
+    border-radius: 10%;
+   
+}
+
+.change-image {
+    position: absolute;
+    bottom: 50%;
+  left: 60px ;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+   
+  
+}
+
+.change-image button{
+    background-color: rgb(40, 90, 133);
+    border: none;
+    font-family: 'Courier New', Courier, monospace;
+    width: 100px;
+    height: 50px;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 7px;
+    transition: .5s;
+    cursor: pointer;
+}
+
+.change-image button:hover{
+    background-color: rgb(16, 223, 154);
+    color: rgb(29, 27, 24);
+}
+
+@media (min-width: 600px){
+    .main-image-container{
+       display: flex;
+       flex-direction: row;
+       justify-content: space-evenly;
+    .change-image{
+        font-size: 3rem;
+    }
+}
+}
