--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr;
-    column-gap: 50px;
+    column-gap: 20px;
     row-gap:20px ;
 }
 
@@ -14,23 +14,20 @@ body{
     position: relative;
     width: 100vw;
     height: 100vh;
-    margin: 10px;
+    margin: 0;
 }
 
 .image-container {
     position: absolute;
-    top :0;
     height: 100%;
-    left: 0;
     display: flex;
-    width: max-content;
-    
+    width: 100%;
 }
 
 
 .image-container img{
-    width: 100%;
-   height: 100%;
+    width: 100vw;
+   height: 100vh;
    object-fit: cover;
     position: relative;
 }
@@ -39,7 +36,7 @@ body{
 .thumbnail-container {
     position: absolute;
     top: 10%;
-    left: 45%;
+    left: 40%;
     display: flex;
     gap: 10px;
     width: max-content;
